# nDspec

./: .gitignore  .readthedocs.yaml  HISTORY.rst  LICENSE  README.md  README.rst  Response.py  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: api.rst  conf.py  fit_cross_1d.ipynb  fit_cross_2d.ipynb  fit_psd.ipynb  fit_spec.ipynb  index.rst  joint_inference.ipynb  numerics.ipynb  requirements.txt  response.ipynb  response_basics.ipynb  response_optimization.ipynb  timing.ipynb  xspec_interface.ipynb
docs/data/: 1200120106_arf.pha  1200120106_rebin.pha  nicer-consim135p-teamonly-array50.arf  nicer_notogip.arf  nicer_unbinned.pha
docs/data/lightcurves/: ni1200120106mpu7_sr_0-49.lc  ni1200120106mpu7_sr_1000-1500.lc  ni1200120106mpu7_sr_105-112.lc  ni1200120106mpu7_sr_113-121.lc  ni1200120106mpu7_sr_122-131.lc  ni1200120106mpu7_sr_132-141.lc  ni1200120106mpu7_sr_142-152.lc  ni1200120106mpu7_sr_153-164.lc  ni1200120106mpu7_sr_165-177.lc  ni1200120106mpu7_sr_178-191.lc  ni1200120106mpu7_sr_192-206.lc  ni1200120106mpu7_sr_207-222.lc  ni1200120106mpu7_sr_223-239.lc  ni1200120106mpu7_sr_240-258.lc  ni1200120106mpu7_sr_259-278.lc  ni1200120106mpu7_sr_279-300.lc  ni1200120106mpu7_sr_301-324.lc  ni1200120106mpu7_sr_325-349.lc  ni1200120106mpu7_sr_350-376.lc  ni1200120106mpu7_sr_377-406.lc  ni1200120106mpu7_sr_407-437.lc  ni1200120106mpu7_sr_438-471.lc  ni1200120106mpu7_sr_472-508.lc  ni1200120106mpu7_sr_50-52.lc  ni1200120106mpu7_sr_509-548.lc  ni1200120106mpu7_sr_53-57.lc  ni1200120106mpu7_sr_549-590.lc  ni1200120106mpu7_sr_58-61.lc  ni1200120106mpu7_sr_591-637.lc  ni1200120106mpu7_sr_62-66.lc  ni1200120106mpu7_sr_638-686.lc  ni1200120106mpu7_sr_67-71.lc  (+11 more)
ndspec/: EmceeUtils.py  FitCrossSpectrum.py  FitPowerSpectrum.py  FitTimeAvgSpectrum.py  JointFit.py  Operator.py  Response.py  SimpleFit.py  Simulator.py  Timing.py  XspecInterface.py  __init__.py  models.py  xspec_library.py
ndspec/tests/: test_fitter.py  test_response.py  test_timing.py
nextspec/: Operator.py  Response.py  Timing.py
notebooks/: conf.py  index.rst
(+11 files in other folders)
