[metadata]
name = ndspec
author = ndspec Developers
author_email = m.lucchini@uva.nl
license = MIT
license_file = LICENSE.rst
url = https://nextspec-prototype.readthedocs.io/en/latest/
description = Multi-dimensional modeling for astrophysical X-ray data
long_description = file: README.rst
edit_on_github = False
https://github.com/matteolucchini1/neXTsPec_prototype


[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:ndspec/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
